--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "block",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect ./index.js",
+    "start": "nodemon --inspect ./src/index.js",
+    "watch": "sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,9 +26,13 @@
   },
   "homepage": "https://github.com/hoanggh123/Block#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.2",
+    "handlebars": "^4.7.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.21",
+    "sass": "^1.59.3"
   }
 }
